--- a/package.json
+++ b/package.json
@@ -10,5 +10,26 @@
     "type": "git",
     "url": "https://github.com/web3-engineer/zaeon"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
+    "clsx": "^2.1.1",
+    "next": "^15.4.6",
+    "postcss": "^8.5.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2",
+    "zustand": "^5.0.7"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.10",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.4.6",
+    "prettier": "^3.6.2"
+  }
 }
