--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,8 +18,8 @@
   "devDependencies": {
     "@react-three/drei": "^9.88.4",
     "@react-three/fiber": "^8.15.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.19.11",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
@@ -30,6 +30,6 @@
     "react-intersection-observer": "^9.5.2",
     "tailwindcss": "^3.4.17",
     "three": "^0.157.0",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
