--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "prisma": "prisma",
+    "seed": "prisma db seed"
   },
   "repository": {
     "type": "git",
@@ -14,10 +19,14 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.14.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "^15.4.6",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -30,6 +39,11 @@
     "@types/react": "^19.1.10",
     "eslint": "^9.33.0",
     "eslint-config-next": "^15.4.6",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "prisma": "^6.14.0",
+    "ts-node": "^10.9.2"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
