--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "date-fns": "^4.1.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@react-three/drei": "^9.88.4",
