dashboard stock template for clients of ReFi

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "spaceportfolio",
+  "name": "zaeon-brazil",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 3000",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "postinstall": "prisma generate",
+    "migrate:deploy": "prisma migrate deploy",
+    "seed": "prisma db seed",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^6.14.0",
+    "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "next": "13.5.6",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
@@ -20,6 +28,7 @@
   "devDependencies": {
     "@react-three/drei": "^9.88.4",
     "@react-three/fiber": "^8.15.4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "20.19.11",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18",
@@ -29,9 +38,13 @@
     "framer-motion": "^10.16.4",
     "maath": "^0.10.4",
     "postcss": "^8.5.6",
+    "prisma": "^6.14.0",
     "react-intersection-observer": "^9.5.2",
     "tailwindcss": "^3.4.17",
     "three": "^0.157.0",
     "typescript": "5.9.2"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
