--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,8 +22,10 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-icons": "^4.11.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@react-three/drei": "^9.88.4",
