--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,15 +7,10 @@
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "prisma generate",
-    "migrate:deploy": "prisma migrate deploy",
-    "seed": "prisma db seed",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@prisma/client": "^6.14.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "next": "13.5.6",
@@ -25,6 +20,7 @@
     "react-feather": "^2.0.10",
     "react-icons": "^4.11.0",
     "recharts": "^3.1.2",
+    "swr": "^2.3.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -40,13 +36,9 @@
     "framer-motion": "^10.16.4",
     "maath": "^0.10.4",
     "postcss": "^8.5.6",
-    "prisma": "^6.14.0",
     "react-intersection-observer": "^9.5.2",
     "tailwindcss": "^3.4.17",
     "three": "^0.157.0",
     "typescript": "5.9.2"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
   }
 }
