--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "zaeon",
+  "name": "zaeon-web",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
+  "description": "Zaeon web app (Next.js)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start",
-    "prisma": "prisma",
-    "seed": "prisma db seed"
+    "start": "next start -p 3000",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/web3-engineer/zaeon"
-  },
-  "private": true,
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.14.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
-    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "^15.4.6",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "swr": "^2.2.0",
     "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2",
     "zustand": "^5.0.7"
@@ -40,10 +33,6 @@
     "eslint": "^9.33.0",
     "eslint-config-next": "^15.4.6",
     "prettier": "^3.6.2",
-    "prisma": "^6.14.0",
     "ts-node": "^10.9.2"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
   }
 }
